<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/toolsTop"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/card_post" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/toolsTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="content,save" />

    <TextView
        android:id="@+id/back"
        android:layout_width="match_parent"
        android:layout_height="@dimen/avatar_size"
        android:background="@android:color/white"
        app:layout_constraintBottom_toTopOf="@id/content" />

    <TextView
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@id/back" />

    <TextView
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/indent"
        android:textColor="@color/design_default_color_secondary"
        app:layout_constraintBottom_toTopOf="@id/postsEditText"
        app:layout_constraintStart_toEndOf="@id/icEdit"
        app:layout_constraintTop_toTopOf="@id/icEdit"
        android:text="@string/editText" />

    <TextView
        android:id="@+id/postsEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/indent"
        android:ellipsize="end"
        android:singleLine="true"
        app:layout_constraintBottom_toBottomOf="@id/icEdit"
        app:layout_constraintEnd_toStartOf="@id/icCancel"
        app:layout_constraintStart_toEndOf="@id/icEdit"
        app:layout_constraintTop_toBottomOf="@id/editText"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="@sample/posts.json/data/content" />

    <ImageView
        android:id="@+id/icEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/indent_12"
        android:layout_marginBottom="@dimen/indent_12"
        android:src="@drawable/ic_edit_24"
        app:layout_constraintBottom_toTopOf="@id/content"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/description_icEdit" />

    <ImageView
        android:id="@+id/icCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/indent_12"
        android:layout_marginBottom="@dimen/indent_12"
        android:src="@drawable/ic_clear_24"
        app:layout_constraintBottom_toTopOf="@id/content"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/description_icCancel" />

    <EditText
        android:id="@+id/content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:hint="@string/post_text"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:padding="@dimen/indent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/toolsTop" />

    <ImageButton
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/indent"
        android:background="@android:color/transparent"
        android:contentDescription="@string/description_like"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/content"
        app:srcCompat="@drawable/ic_save_48" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/groupEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="icEdit, editText, postsEditText, icCancel, back, divider" />

</androidx.constraintlayout.widget.ConstraintLayout>